<resources>
    <string name="app_name">Mesh</string>

    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_contact">Contact</string>
    <string name="menu_setting">Setting</string>
    <string name="menu_saved">Saved</string>
    <string name="notification_listener">Mesh Listener</string>

    <string name="setting_sort">Sort</string>
    <string name="setting_sort_frequency">Frequency</string>
    <string name="setting_sort_recency">Recency</string>
    <string name="setting_sort_unknown">Unknown</string>
    <string name="setting_delete_notification">Delete notification on start up</string>
    <string name="setting_reset">Reset</string>
    <string name="setting_backup">Backup</string>

    <string name="default_nav_header_image_desc">This is a profile picture</string>
    <string name="default_nav_header_name">This is a profile name</string>
    <string name="default_timestamp">This is a timestamp</string>
    <string name="default_text_message">This is a a text message</string>
    <string name="default_source_app_desc">This is a source app</string>
    <string name="default_contact_icon_desc">This is a contact icon</string>
    <string name="default_contact_name">This is a contact name</string>
    <string name="default_sort">@string/setting_sort_recency</string>
    <string name="default_tag">Enter Tag Name</string>
    <string name="default_tagname">@string/tag_autofill</string>

    <string name="alert_dialog_enable_notification_warning">Please enable the notification listener for our application to work</string>
    <string name="alert_dialog_positive_button">OK</string>
    <string name="alert_dialog_negative_button">Cancel</string>
    <string name="snackbar_delete">Delete</string>
    <string name="snackbar_save">Save</string>
    <string name="tag_autofill">favourite</string>

    <string name="action_merge_mode">Merge Mode</string>
    <string name="action_swap_mode">Swap Mode</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="remove">Remove</string>
    <string name="contact_merge">Merged Contacts</string>
    <string name="action_unmerge">Unmerge</string>
    <string name="default_datestamp"><u>1st January 1970</u></string>
    <string name="cancel">CANCEL</string>
    <string name="ok">OK</string>
    <string name="default_alert_dialog_details">This is an alert dialog detail</string>
    <string name="default_alert_dialog_title">This is an alert dialog title</string>
    <string name="alert_dialog_notification_listener">Mesh Listener</string>
    <string name="alert_dialog_unmerge_title">Unmerge Contact?</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

</resources>
