<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/BritishBlue">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_alert_dialog_title"
        android:textColor="@color/Ivory"
        android:textSize="@dimen/textsize_big"
        android:layout_margin="@dimen/margin_all_default"/>

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_alert_dialog_details"
        android:textColor="@color/Ivory"
        android:textSize="@dimen/textsize_medium"
        android:alpha="0.54"
        android:layout_margin="@dimen/margin_all_default"
        android:layout_below="@id/title"/>

    <Button
        android:id="@+id/ok_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textColor="@color/text_message"
        android:textSize="@dimen/textsize_medium"
        android:background="@null"
        android:layout_margin="@dimen/margin_all_default"
        android:layout_below="@id/details"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/cancel_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textColor="@color/text_message"
        android:textSize="@dimen/textsize_medium"
        android:layout_toStartOf="@id/ok_button"
        android:background="@null"
        android:layout_margin="@dimen/margin_all_default"
        android:layout_below="@id/details"
        />
</RelativeLayout>