<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/save_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/all_button"
    android:backgroundTint="@color/save_dialog_background"
    android:padding="@dimen/margin_all_default">

    <Button
        android:id="@+id/add_button"
        android:layout_width="@dimen/size_addbutton"
        android:layout_height="@dimen/size_addbutton"
        android:layout_alignTop="@id/add_field"
        android:layout_alignBottom="@id/add_field"
        android:padding="@dimen/margin_all_default"
        android:background="@drawable/savedialog_addbutton"
        />

    <EditText
        android:id="@+id/add_field"
        android:layout_width="@dimen/width_tagfield"
        android:layout_height="@dimen/height_tagfield"
        android:layout_margin="@dimen/margin_all_default"
        android:paddingHorizontal="@dimen/margin_all_default"
        android:layout_toEndOf="@id/add_button"
        android:background="@drawable/all_button"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@null"
        android:textColor="@color/headers"
        android:textSize="@dimen/textsize_big"
        android:imeOptions="actionDone"
        android:hint="@string/default_tag"
        android:autofillHints="@string/tag_autofill"
        android:textColorHint="@color/headers"
        android:inputType="text"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tag_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_all_recyclerview"
        android:layout_below="@id/add_button"
        android:layout_alignStart="@id/add_button"
        android:layout_alignEnd="@id/add_field"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <Button
        android:id="@+id/save_bar"
        android:layout_width="@dimen/width_savebutton"
        android:layout_height="@dimen/height_savebutton"
        android:layout_below="@id/tag_list"
        android:layout_centerHorizontal="true"
        android:background="@drawable/all_button"
        android:textColor="@color/Black"
        android:text="@string/snackbar_save"
        />

</RelativeLayout>