<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/bottom_sheet"
    android:orientation="horizontal"
    android:padding="@dimen/_16sdp"
    >

    <RelativeLayout
        android:id="@+id/gallery_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/gallery_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignStart="@id/gallery_name"
            android:layout_alignEnd="@id/gallery_name"/>
        <TextView
            android:id="@+id/gallery_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_message"
            android:textStyle="bold"
            android:textSize="@dimen/default_text_size"
            android:text="@string/gallery"
            android:layout_below="@id/gallery_icon"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/camera_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_child_margin"
        android:layout_toEndOf="@id/gallery_group">
        <ImageView
            android:id="@+id/camera_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/camera_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/text_message"
            android:textStyle="bold"
            android:textSize="@dimen/default_text_size"
            android:text="@string/camera"
            android:layout_below="@id/camera_icon"/>
    </RelativeLayout>

    <Button
        android:id="@+id/reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/camera_group"
        android:layout_alignTop="@id/camera_group"
        android:layout_alignBottom="@id/camera_group"
        android:layout_marginStart="@dimen/default_child_margin"
        android:text="@string/setting_reset"
        android:background="@drawable/setting_reset_custom_border"/>


</RelativeLayout>