<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/save_dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/setting_reset_custom_border"
    android:backgroundTint="@color/save_dialog_background"
    android:padding="@dimen/default_child_margin">

    <Button
        android:id="@+id/add_button"
        android:layout_width="@dimen/add_button_size"
        android:layout_height="@dimen/add_button_size"
        android:layout_alignTop="@id/add_field"
        android:layout_alignBottom="@id/add_field"
        android:padding="@dimen/default_child_margin"
        android:background="@drawable/dialog_add"
        />

    <EditText
        android:id="@+id/add_field"
        android:layout_width="@dimen/tag_field_width"
        android:layout_height="@dimen/tag_field_height"
        android:layout_margin="@dimen/default_child_margin"
        android:paddingHorizontal="@dimen/default_child_margin"
        android:layout_toEndOf="@id/add_button"
        android:background="@drawable/setting_reset_custom_border"
        android:backgroundTint="@color/colorPrimary"
        android:textCursorDrawable="@null"
        android:textColor="@color/headers"
        android:textSize="@dimen/default_text_size"
        android:imeOptions="actionDone"
        android:hint="@string/default_tag"
        android:autofillHints="@string/tag_autofill"
        android:textColorHint="@color/headers"
        android:inputType="text"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/tag_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        android:layout_below="@id/add_button"
        android:layout_alignStart="@id/add_button"
        android:layout_alignEnd="@id/add_field"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        />

    <Button
        android:id="@+id/save_bar"
        android:layout_width="@dimen/save_button_width"
        android:layout_height="@dimen/save_button_height"
        android:layout_below="@id/tag_list"
        android:layout_centerHorizontal="true"
        android:background="@drawable/setting_reset_custom_border"
        android:textColor="@color/Black"
        android:text="@string/snackbar_save"
        />

</RelativeLayout>