<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/speech_bubble_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <RelativeLayout
        android:id="@+id/bubble"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/messageactivity_speechbubble">

        <TextView
            android:id="@+id/incoming_bubble_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:paddingHorizontal="@dimen/margin_all_recyclerview"
            android:paddingTop="@dimen/padding_speechbubble_vertical"
            android:maxWidth="@dimen/width_speechbubble_maximum"
            android:textSize="@dimen/textsize_big"
            android:textColor="@color/Black"
            android:textStyle="bold"
            android:visibility="gone"
            />
    <!-- Falling below 70dp in width will result in deformed speech bubble /-->
    <TextView
        android:id="@+id/incoming_bubble_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/width_speechbubble_maximum"
        android:paddingHorizontal="@dimen/margin_all_recyclerview"
        android:paddingVertical="@dimen/padding_speechbubble_vertical"
        android:layout_below="@id/incoming_bubble_title"
        android:text="@string/default_text_message"
        android:textColor="@color/Black"
        android:textSize="@dimen/textsize_big"/>

    <ImageView
        android:id="@+id/incoming_bubble_source"
        android:layout_width="@dimen/size_sourceicon"
        android:layout_height="@dimen/size_sourceicon"
        android:contentDescription="@string/default_source_app_desc"
        android:padding="@dimen/margin_all_default"
        android:layout_alignEnd="@id/incoming_bubble_timestamp"
        android:layout_below="@id/incoming_bubble_timestamp"
        android:src="@mipmap/default_icon"
        />

    <TextView
        android:id="@+id/incoming_bubble_timestamp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:padding="@dimen/margin_all_default"
        android:textSize="@dimen/textsize_medium"
        android:text="@string/default_timestamp"
        android:layout_toEndOf="@id/incoming_bubble_text"/>

    </RelativeLayout>
</LinearLayout>