<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/home_card_background">

    <androidx.cardview.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/margin_all_default"
        android:longClickable="false"
        card_view:cardCornerRadius="20dp">

        <RelativeLayout
            android:id="@+id/inner_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_color">

            <TextView
                android:id="@+id/message_contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_all_default"
                android:layout_marginTop="@dimen/margin_all_default"
                android:text="@string/default_contact_name"
                android:textSize="@dimen/textsize_header"
                android:textColor="@color/headers"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/message_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/message_contact_name"
                android:layout_margin="@dimen/margin_all_default"
                android:text="@string/default_text_message"
                android:maxWidth="@dimen/width_speechbubble_maximum"
                android:textColor="@color/headers"
                android:textSize="@dimen/textsize_big"
                 />

            <TextView
                android:id="@+id/message_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/margin_all_default"
                android:text="@string/default_timestamp"
                android:textColor="@color/headers" />

            <include
                layout="@layout/layout_sourceicon_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignBottom="@id/message_content"
                android:layout_margin="@dimen/margin_all_default"/>

            <!--TextView
                android:id="@+id/txtContent"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/title"
                android:layout_below="@id/txtName"
                android:layout_alignLeft="@id/txtName"
                android:text="(Content Here)"
                android:textColor="@color/Tiger"
                android:textSize="10dp" /-->

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</RelativeLayout>