<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/home_card_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/margin_all_recyclerview">

    <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/home_card"
        android:layout_width="match_parent"
        android:layout_height="@dimen/height_homeitem"
        android:layout_marginVertical="@dimen/margin_all_default"
        android:longClickable="false"
        card_view:cardCornerRadius="20dp">

        <RelativeLayout
            android:id="@+id/inner_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/card_color"
            android:paddingStart="@dimen/margin_all_default">

            <ImageView
                android:id="@+id/contact_icon"
                android:layout_width="@dimen/size_contacticon"
                android:layout_height="@dimen/size_contacticon"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/margin_all_default"
                android:contentDescription="@string/default_contact_icon_desc"
                android:src="@mipmap/default_icon" />


            <TextView
                android:id="@+id/contact_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginHorizontal="@dimen/margin_all_default"
                android:layout_toEndOf="@id/contact_icon"
                android:text="@string/default_contact_name"
                android:textColor="@color/headers"
                android:textSize="@dimen/textsize_header"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/contact_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="@dimen/margin_all_default"
                android:text="@string/default_timestamp"
                android:textColor="@color/headers"
                android:textSize="@dimen/textsize_medium" />

            <include
                layout="@layout/layout_sourceicon_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="@dimen/margin_all_default" />

            <!--TextView
                android:id="@+id/txtContent"
                android:layout_marginTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/title"
                android:layout_below="@id/txtName"
                android:layout_alignLeft="@id/txtName"
                android:text="(Content Here)"
                android:textColor="@color/Tiger"
                android:textSize="10dp" /-->

        </RelativeLayout>


    </androidx.cardview.widget.CardView>
</RelativeLayout>